[Media Controls] Prevent fullscreen orientation lock rotate glitch

When both chrome://flags/#video-rotate-to-fullscreen and
chrome://flags/#video-fullscreen-orientation-lock are enabled, pressing
the fullscreen button then rotating the device to the opposite
orientation than the one that was locked to could result in jank or
accidentally exiting fullscreen. This patch works around those problems.

BUG=728145

Review-Url: https://codereview.chromium.org/2919513002
Cr-Commit-Position: refs/heads/master@{#479715}

Former-commit-id: eeb22bd5bbaa417f1265e1fa596321d74d5e7f1e